feat: update to 1.21.6-1.21.8 (#13)